# fastapi_async_celery

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.envs/: .fastapi  .postgres
compose/: migrate  start  start-worker
fastapi_async_celery/: celery_app.py  create_celery_app.py  main.py  tasks.py
fastapi_async_celery/config/: async_db_context_manager.py  db_model_base.py  depends.py  settings.py
fastapi_async_celery/config/alembic/: alembic.ini  env.py
fastapi_async_celery/config/alembic/versions/: 26e0a88d0729_.py  8a21ae799e64_.py
fastapi_async_celery/s3_char_count/: batch_service.py  db_model.py  router.py  schema.py
localstack/cloud-formation/: localstack-cf.yml
localstack/scripts/: 0001_initial.sh
tests/: conftest.py
tests/fastapi_async_celery/: test_hello_world.py
tests/fastapi_async_celery/s3_char_count/: test_handle_batch.py  test_handle_file.py  test_s3_char_count_api.py  test_s3_helper.py
