[tool.poetry]
name = "fastapi-async-celery"
version = "0.1.0"
description = ""
authors = ["Kostas Chaidos <chaidosk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
