[tool.poetry]
name = "fastapi-async-celery"
version = "0.1.0"
description = ""
authors = ["Kostas Chaidos <chaidosk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.9"
celery = { version = "^5.3.4", extras = ["sqs"] }
asgiref = "^3.7.2"


[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"
pytest = "^7.4.2"
testcontainers-postgres = "^0.0.1rc1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
